# llm-for-typo-fixing

./: .gitignore  AGENTS.md  Makefile  README.md  build_all_datasets.sh  build_datasets.err  pyproject.toml
benchmarks/: byt5_beam5_quicktest.json  byt5_quicktest.json  codet5_beam5_quicktest.json  codet5_quicktest.json  gector_quicktest.json  llm_gemma4-e2b_quicktest.json  llm_llama-3.2-1b_quicktest.json  llm_qwen-2.5-coder-0.5b_quicktest.json  llm_qwen-3.5-0.8b_quicktest.json  llm_qwen3.5-9B_quicktest.json  llm_wordstorm_quicktest.json  lora_seq2seq_quicktest.json  spellcheck_quicktest.json  typos_quicktest.json
config/: llm_presets.toml
data/: quicktest.jsonl
scripts/: train_lora.py
seq2seq-training/: Seq2Seq_byt5.ipynb  Seq2Seq_byt5.py  Seq2Seq_codet5.ipynb  Seq2Seq_codet5.py
src/: benchmark.py  benchmark_viz.py  build_dataset.py  eval.py  harness.py  identifier_utils.py  identifier_utils_libcst.py  sources.py  text_utils.py  typo_datasets.py  typo_injector.py  viewer.py  viewer_template.html
src/gector/: __init__.py  dataset.py  fixer.py  model.py  predict.py  tokenize_code.py  train.py  vocab.py
src/models/: __init__.py  base.py  byt5_seq2seq.py  codet5_seq2seq.py  llm_api.py  lora_seq2seq.py  spellcheck.py  typos.py
tests/: test_data_loaders.py  test_gector_dataset.py  test_gector_model.py  test_gector_tokenize.py  test_gector_vocab.py  test_harness.py  test_identifier_utils.py  test_identifier_utils_libcst.py  test_models.py  test_models_llm.py  test_models_spellcheck.py  test_models_typos.py  test_sources.py  test_text_utils.py  test_typo_injector.py  tokenizer_cache.py
