[project]
name = "llm-for-typo-fixing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "datasets>=2.14.0",
  "httpx[socks]>=0.28.1",
  "jedi>=0.20.0",
  "Levenshtein>=0.27.0",
  "pyspellchecker>=0.8.0",
  "tqdm>=4.65.0",
  "typos>=1.47.2",
  # GECToR dependencies (optional — only needed for training/inference).
  # Install with:  uv add torch transformers
  "torch>=2.0.0",
  "transformers>=4.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
