[project]
name = "llm-for-typo-fixing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=2.14.0",
  "httpx[socks]>=0.28.1",
  "Levenshtein>=0.27.0",
  "openai>=2.43.0",
  "pyspellchecker>=0.8.0",
  "tqdm>=4.65.0",
  "typos>=1.47.2",
  # GECToR dependencies (optional — only needed for training/inference).
  # Install with:  uv add torch transformers
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "libcst>=1.8.6",
  "matplotlib>=3.7.0",
  "bitsandbytes>=0.49.2",
  "peft>=0.19.1",
  "accelerate>=1.14.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.0.0",
  "transformers>=4.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=6.0.0",
]
